--- a/site/basic_concepts/aerodynamics/index.html
+++ b/site/basic_concepts/aerodynamics/index.html
@@ -1327,7 +1327,7 @@ $$</p>
 <p>Para aerofólios que se movem a velocidades subsônicas (<span class="arithmatex">\(&lt;1.000km/h\)</span>), apenas o ângulo de ataque <span class="arithmatex">\(\alpha\)</span>, representado na figura abaixo, acaba apresentando uma influência significativa.</p>
 <p><img alt="Airfoil2" src="../images/airfoil2.pdf" style="display: block; margin: auto;" width="400" /></p>
 <p>Há diversos perfils diferentes para um aerfofólio. Um bastante conhecido e utilizado é o perfil Clark Y, cujos coeficientes de arrasto e sustentação em função do ângulo de ataque são bem conhecidos e dados<sup id="fnref:1"><a class="footnote-ref" href="#fn:1">1</a></sup> pelo gráfico abaixo.</p>
-<p><img alt="ClarkY" src="../images/clarky.svg" style="display: block; margin: auto;" width="600" /></p>
+<p><img alt="ClarkY" src="../images/clarky.svg" style="display: block; margin: auto;" width="100%" /></p>
 <p>Enquanto o coeficiente de arrasto só aumenta com o ângulo de ataque, o coeficiente de sustentação tem um ponto máximo (<span class="arithmatex">\(\alpha=18^{\circ}\)</span>). Esse ponto é conhecido como "estol" ou simplesmente "perda de sustentação", e ele ocorre quando o fluxo de ar descola da asa (deixa de seguir o contorno superior da asa gerando uma turbulência). Note que o coeficiente de sustentação é nulo com uma leve inclinação negativa (<span class="arithmatex">\(\alpha=-5^{\circ}\)</span>), e negativo abaixo disso.</p>
 <div class="admonition question">
 <p class="admonition-title">Exercício 1</p>
