--- a/site/identification/lift_constant/index.html
+++ b/site/identification/lift_constant/index.html
@@ -1371,7 +1371,7 @@
 <span class="w">    </span><span class="p">}</span>
 <span class="p">}</span>
 </code></pre></div></td></tr></table></div>
-<p>As etapas para coletar um dado são as seguintes:</p>
+<p>As etapas para coletar os dados são as seguintes:</p>
 <ol>
 <li>Garanta que a bateria do drone está carregada </li>
 <li>Prenda o drone no dispositivo e zere a balança presionando o botão <code>T</code></li>
@@ -1384,10 +1384,10 @@
 <table>
 <thead>
 <tr>
-<th><span class="arithmatex">\(\omega(rad/s)\)</span></th>
-<th><span class="arithmatex">\(W_1(g)\)</span></th>
-<th><span class="arithmatex">\(W_2(g)\)</span></th>
-<th><span class="arithmatex">\(W_3(g)\)</span></th>
+<th><span class="arithmatex">\(\omega \, (rad/s)\)</span></th>
+<th><span class="arithmatex">\(W_1 \, (g)\)</span></th>
+<th><span class="arithmatex">\(W_2 \, (g)\)</span></th>
+<th><span class="arithmatex">\(W_3 \, (g)\)</span></th>
 </tr>
 </thead>
 <tbody>
