--- a/site/identification/drag_constant/index.html
+++ b/site/identification/drag_constant/index.html
@@ -1230,6 +1230,83 @@
 </ul>
 <hr />
 <h2 id="procedimento-experimental">Procedimento experimental</h2>
+<p>As etapas para coletar os dados são as seguintes:</p>
+<ol>
+<li>Garanta que a bateria do drone está carregada </li>
+<li>Prenda o drone no dispositivo e posicione um cronômetro ao seu lado</li>
+<li>Arme o drone apertando o botão <code>Arm</code> no CFClient</li>
+<li>Comece a filmar com seu celular no modo câmera lenta</li>
+<li>Ligue os motores com o Command Based Flight Control do CFClient</li>
+<li>Espere o drone dar duas voltas e pare de filmar</li>
+<li>Repita as etapas 3-6 três vezes</li>
+</ol>
+<p>Após o experimento, você deverá coletar dados para preencher a tabela abaixo.</p>
+<table>
+<thead>
+<tr>
+<th><span class="arithmatex">\(\psi \, (^{\circ})\)</span></th>
+<th><span class="arithmatex">\(t_1 \, (s)\)</span></th>
+<th><span class="arithmatex">\(t_2 \, (s)\)</span></th>
+<th><span class="arithmatex">\(t_3 \, (s)\)</span></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><span class="arithmatex">\(0\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(90\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(180\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(270\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(360\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(450\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(540\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(630\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><span class="arithmatex">\(720\)</span></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 <hr />
 <h2 id="analise-de-dados">Análise de dados</h2>
 <p><img alt="Drag Torque" src="../images/drag_torque_graph.svg" style="display: block; margin: auto;" width="100%" /></p>
