--- a/site/basic_concepts/aerodynamics/index.html
+++ b/site/basic_concepts/aerodynamics/index.html
@@ -1281,7 +1281,7 @@
 <p>O modelo matemático de um drone, qualquer que seja seu tipo, contém diversos parâmetros aerodinâmicos. No entanto, para obter o conhecimento necessário, começaremos examinando as forças aerodinâmicas em um aerofólio.</p>
 <h3 id="forcas-aerodinamicas">Forças aerodinâmicas</h3>
 <p>A figura abaixo mostra a secção transversal de um aerofólio, um corpo teórico moldado para produzir sustentação quando colocado em um fluxo de ar.</p>
-<p><img alt="Airfoil1" src="../images/airfoil1.pdf" style="display: block; margin: auto;" width="400" /></p>
+<p><img alt="Airfoil1" src="../images/airfoil1.svg" style="display: block; margin: auto;" width="400" /></p>
 <p>Apesar de um aerofólio ser projetado para produzir uma força desejada de sustentação <span class="arithmatex">\(f_l\)</span> (perpendicular à velocidade <span class="arithmatex">\(v\)</span>), ele também produz uma força indesejada de arrasto <span class="arithmatex">\(f_d\)</span> (paralela à velocidade <span class="arithmatex">\(v\)</span>):
 $$
     f_l = \frac{1}{2} \rho A C_l v^2 
@@ -1304,7 +1304,7 @@ $$</p>
 <li>Número Mach (<span class="arithmatex">\(\frac{v}{v_s}\)</span>), que é a razão entre a velocidade e a velocidade do som e define o regime de velocidade (subsônica, supersônica e hipersônica)</li>
 </ul>
 <p>Para aerofólios que se movem a velocidades subsônicas (<span class="arithmatex">\(&lt;1.000km/h\)</span>), apenas o ângulo de ataque <span class="arithmatex">\(\alpha\)</span>, representado na figura abaixo, acaba apresentando uma influência significativa.</p>
-<p><img alt="Airfoil2" src="../images/airfoil2.pdf" style="display: block; margin: auto;" width="400" /></p>
+<p><img alt="Airfoil2" src="../images/airfoil2.svg" style="display: block; margin: auto;" width="400" /></p>
 <p>Há diversos perfils diferentes para um aerfofólio. Um bastante conhecido e utilizado é o perfil Clark Y, cujos coeficientes de arrasto e sustentação em função do ângulo de ataque são bem conhecidos e dados<sup id="fnref:1"><a class="footnote-ref" href="#fn:1">1</a></sup> pelo gráfico abaixo.</p>
 <p><img alt="ClarkY" src="../images/clarky.svg" style="display: block; margin: auto;" width="100%" /></p>
 <p>Enquanto o coeficiente de arrasto só aumenta com o ângulo de ataque, o coeficiente de sustentação tem um ponto máximo (<span class="arithmatex">\(\alpha=18^{\circ}\)</span>). Esse ponto é conhecido como "estol" ou simplesmente "perda de sustentação", e ele ocorre quando o fluxo de ar descola da asa (deixa de seguir o contorno superior da asa gerando uma turbulência). Note que o coeficiente de sustentação é nulo com uma leve inclinação negativa (<span class="arithmatex">\(\alpha=-5^{\circ}\)</span>), e negativo abaixo disso.</p>
@@ -1400,7 +1400,7 @@ $$</p>
 <p>Uma hélice é composta por <span class="arithmatex">\(n\)</span> pás, onde cada pá pode ser interpretada como um aerofólio.</p>
 <h3 id="forcas-e-torques-aerodinamicos">Forças e torques aerodinâmicos</h3>
 <p>Quando a hélice rotaciona, surgem forças de sustentação e arrasto em cada uma de suas pás, conforme a figura abaixo.</p>
-<p><img alt="Propeller1" src="../images/propeller1.pdf" style="display: block; margin: auto;" width="400&quot;" /></p>
+<p><img alt="Propeller1" src="../images/propeller1.svg" style="display: block; margin: auto;" width="400&quot;" /></p>
 <p>Onde:</p>
 <ul>
 <li><span class="arithmatex">\(d\)</span> - Distância do centro de pressão ao eixo de rotação (<span class="arithmatex">\(m\)</span>)</li>
@@ -1428,7 +1428,7 @@ $$</p>
 </details>
 </div>
 <p>As forças de sustentação e arrasto em cada uma das pás podem ser representadas por uma única força de sustentação e torque de arrasto da hélice, conforme a figura abaixo.</p>
-<p><img alt="Propeller2" src="../images/propeller2.pdf" style="display: block; margin: auto;" width="400" /></p>
+<p><img alt="Propeller2" src="../images/propeller2.svg" style="display: block; margin: auto;" width="400" /></p>
 <div class="admonition question">
 <p class="admonition-title">Exercício 3</p>
 <p>Determine a força de sustentação <span class="arithmatex">\(f\)</span> e torque de arrasto <span class="arithmatex">\(\tau\)</span> da hélice</p>
@@ -1463,7 +1463,7 @@ f = \underbrace{\rho A C_l d^2}_{k_l} \omega^2
 </ul>
 <h3 id="constantes-aerodinamicas">Constantes aerodinâmicas</h3>
 <p>Ou seja, apenas dois parâmetros definem a força e o torque que uma hélice produz, que dependem do quadrado de sua velocidade angular:</p>
-<p><img alt="Propeller3" src="../images/propeller3.pdf" style="display: block; margin: auto;" width="350" /></p>
+<p><img alt="Propeller3" src="../images/propeller3.svg" style="display: block; margin: auto;" width="350" /></p>
 <div class="arithmatex">\[
 f = k_l \omega^2 
 \qquad
