--- a/site/first_steps/installations/index.html
+++ b/site/first_steps/installations/index.html
@@ -1281,7 +1281,7 @@
 
 
 <h1 id="instalacoes">Instalações</h1>
-<p>Nesta secção estão as instruções para instalar todas as ferramentas e dependências necessárias para o seu ambiente de desenvolvimento. </p>
+<p>Esta secção contém as instruções para instalar todas as ferramentas e dependências necessárias para o seu ambiente de desenvolvimento. </p>
 <p>Siga cada passo conforme seu sistema operacional com atenção, para garantir uma configuração correta.</p>
 <hr />
 <h2 id="windows">Windows</h2>
