--- a/site/identification/lift_constant/index.html
+++ b/site/identification/lift_constant/index.html
@@ -1219,7 +1219,7 @@
 <hr />
 <h2 id="fundamentos-teoricos">Fundamentos teóricos</h2>
 <p>As hélices de um quadricoptero atuam como superfícies aerodinâmicas, acelerando o fluxo de ar através delas. Isso consome energia das baterias e produz forças de sustentação e torques de arrasto no quadricoptero. Já <a href="../../basic_concepts/aerodynamics/">deduzimos</a> que a força de sustentação de uma hélice <span class="arithmatex">\(f\)</span> é proporcional à velocidade angular da hélice <span class="arithmatex">\(\omega\)</span> ao quadrado.</p>
-<p><img alt="Lift Force" src="../images/lift_force.pdf" style="display: block; margin: auto;" width="350" /></p>
+<p><img alt="Lift Force" src="../images/lift_force.svg" style="display: block; margin: auto;" width="350" /></p>
 <div class="arithmatex">\[
     \tau = k_l \omega^2
 \]</div>
