--- a/site/identification/drag_constant/index.html
+++ b/site/identification/drag_constant/index.html
@@ -1199,7 +1199,7 @@
 <hr />
 <h2 id="fundamentos-teoricos">Fundamentos teóricos</h2>
 <p>As hélices de um quadricoptero atuam como superfícies aerodinâmicas, acelerando o fluxo de ar através delas. Isso consome energia das baterias e produz forças de sustentação e torques de arrasto no quadricoptero. Já <a href="../../basic_concepts/aerodynamics/">deduzimos</a> que o torque de arrasto de uma hélice <span class="arithmatex">\(\tau\)</span> é proporcional à velocidade angular da hélice <span class="arithmatex">\(\omega\)</span> ao quadrado.</p>
-<p><img alt="Drag Torque" src="../images/drag_torque.pdf" style="display: block; margin: auto;" width="350" /></p>
+<p><img alt="Drag Torque" src="../images/drag_torque.svg" style="display: block; margin: auto;" width="350" /></p>
 <div class="arithmatex">\[
     \tau = k_d \omega^2
 \]</div>
